--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -23,6 +23,7 @@ th {
 }
 .leaflet-popup-content {
     width:auto !important;
+    white-space:nowrap;
 }
 .leaflet-tooltip {
     background: none;
